Update javadoc cmd